[package]
name = "metal-carl"
version = "0.1.0"
edition = "2021"
links = "ceres"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Cargo.toml

[dependencies]
cxx = "1.0"
autodiff = "0.4.0"
num-traits = "0.2.14"

[build-dependencies]
cxx-build = "1.0"